--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 🚀 Run Terraform build & tests inside linux/386 container
+        env:
+          QA_TOKEN: ${{ secrets.QA_TOKEN }}
         run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -s <<'EOF'
             set -e
 
             echo '📦 Installing dependencies...'
@@ -37,21 +39,21 @@ jobs:
             echo '📥 Installing Go 1.22.3...'
             curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz &&
             tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz &&
-            export PATH=/usr/local/go/bin:\$PATH &&
+            export PATH=/usr/local/go/bin:$PATH &&
             export GOPATH=/workspace/go &&
-            mkdir -p \$GOPATH &&
-            export PATH=\$PATH:/workspace &&
+            mkdir -p "$GOPATH" &&
+            export PATH="$PATH:$GOPATH/bin" &&
             export GOARCH=386 &&
             export GOOS=linux &&
-            cd /workspace &&
             go version
 
             echo '🛠 Tidying and building Terraform provider...'
+            cd /workspace &&
             sed -i 's/^go 1\\.22\\.7/go 1.22/' go.mod &&
             go mod tidy &&
             go build -o terraform-provider-digicert &&
-            mkdir -p \$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386 &&
-            cp terraform-provider-digicert \$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386
+            mkdir -p "$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386" &&
+            cp terraform-provider-digicert "$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386"
 
             echo '⬇ Installing Terraform 1.1.4...'
             wget https://releases.hashicorp.com/terraform/1.1.4/terraform_1.1.4_linux_386.zip &&
@@ -62,12 +64,12 @@ jobs:
             echo '⬇ Installing Maven 3.9.6...'
             curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz &&
             tar -xzf apache-maven-3.9.6-bin.tar.gz &&
-            export MAVEN_HOME=\$PWD/apache-maven-3.9.6 &&
-            export PATH=\$MAVEN_HOME/bin:\$PATH &&
+            export MAVEN_HOME=/workspace/apache-maven-3.9.6 &&
+            export PATH="$MAVEN_HOME/bin:$PATH" &&
             mvn -version
 
             echo '🔄 Cloning automation test repo...'
-            git clone https://x-access-token:${{ secrets.QA_TOKEN }}@github.com/digicert/DigicertTerraformTests.git &&
+            git clone https://x-access-token:$QA_TOKEN@github.com/digicert/DigicertTerraformTests.git &&
             cd DigicertTerraformTests
 
             echo '▶ Running initial Maven test suite...'
@@ -80,4 +82,4 @@ jobs:
             fi
 
             echo '✅ Tests completed successfully.'
-          "
+          EOF
